добавлено:

- В Window API было добавлено 6 новых функций:
    - set_always_top()
    - get_always_top()
    - maximize()
    - minimize()
    - restore()
    - raise()

- Добавлена поддержка шейдеров и их кэширование. Желательно изменить динамический массив на хэш-таблицу для большей производительности.

- Добавлена работа с динамическим массивом.

- Добавлена работа с 2D камерой.

- Добавлен заголовочный файл для получения точного времени и ухода в сон или вызвать задержку выполнения кода.


===


изменено/исправлено:

- Мелкие ошибки в коде и опечатки.

- Система сборки обновлена.