@@ -10,6 +10,15 @@
 #include <stdlib.h>
 
 
+// Получить размер заголовка блока в байтах:
+size_t mm_get_block_header_size();
+
+// Получить количество выделенных блоков:
+size_t mm_get_total_allocated_blocks();
+
+// Получить абсолютный размер используемой памяти в байтах с учётом заголовков блоков:
+size_t mm_get_absolute_used_size();
+
 // Получить сколько всего используется памяти в байтах этим менеджером памяти:
 size_t mm_get_used_size();
 
