@@ -16,11 +16,17 @@
 
 - Добавлен заголовочный файл для получения точного времени и ухода в сон или вызвать задержку выполнения кода.
 
+- В mm ядра добавлены новые функции:
+    - mm_get_block_header_size() - Для получения размера заголовка блока в байтах.
+    - mm_get_total_allocated_blocks() - Для получения количества выделенных блоков.
+    - mm_get_absolute_used_size() - Для получения абсолютного размера используемой памяти (учитываются заголовки блоков по 4*16 или 8*16 байт).
 
 ===
 
 
 изменено/исправлено:
+
+- Теперь mm ядра выравнивает возвращаемые и используемые указатели по 8 байт для SSE, AVX/2, кэша и чётных адресов блоков. Это важно!
 
 - Мелкие ошибки в коде и опечатки.
 
